# Consolation

./: .gitignore  .gitmodules  CMakeLists.txt  consolation.c  consolation.h  file.c  file.h  font.h  main.c  stb_image.h
res/: frag.glsl  vert.glsl
